_docs/v0.54/embedding/sdk/api/snippets/MetabaseColors.md
---
version: v0.54
has_magic_breadcrumbs: true
show_category_breadcrumb: true
show_title_breadcrumb: true
category: Embedding
title: MetabaseColors
source_url: 'https://github.com/metabase/metabase/blob/master/docs/embedding/sdk/api/snippets/MetabaseColors.md'
layout: new-docs
---

## Properties

<!-- [<snippet properties>] -->

| Property                                                  | Type                                  | Description                                                                             |
| :-------------------------------------------------------- | :------------------------------------ | :-------------------------------------------------------------------------------------- |
| <a id="background"></a> `background?`                     | `string`                              | Default background color.                                                               |
| <a id="background-disabled"></a> `background-disabled?`   | `string`                              | Muted background color used for disabled elements, such as disabled buttons and inputs. |
| <a id="background-hover"></a> `background-hover?`         | `string`                              | Slightly darker background color used for hover and accented elements.                  |
| <a id="background-secondary"></a> `background-secondary?` | `string`                              | Slightly muted background color.                                                        |
| <a id="border"></a> `border?`                             | `string`                              | Color used for borders                                                                  |
| <a id="brand"></a> `brand?`                               | `string`                              | Primary brand color used for buttons and links                                          |
| <a id="brand-hover"></a> `brand-hover?`                   | `string`                              | Lighter variation of the brand color. Used for hover and accented elements.             |
| <a id="brand-hover-light"></a> `brand-hover-light?`       | `string`                              | Lightest variation of the brand color. Used for hover and accented elements.            |
| <a id="charts"></a> `charts?`                             | [`ChartColor`](./api/ChartColor)[] | Chart colors                                                                            |
| <a id="filter"></a> `filter?`                             | `string`                              | Color used for filters context                                                          |
| <a id="negative"></a> `negative?`                         | `string`                              | Color used to indicate dangerous actions and negative values/trends                     |
| <a id="positive"></a> `positive?`                         | `string`                              | Color used to indicate successful actions and positive values/trends                    |
| <a id="shadow"></a> `shadow?`                             | `string`                              | Color used for popover shadows                                                          |
| <a id="summarize"></a> `summarize?`                       | `string`                              | Color used for aggregations and breakouts context                                       |
| <a id="text-primary"></a> `text-primary?`                 | `string`                              | Text color on dark elements. Should be a lighter color for readability.                 |
| <a id="text-secondary"></a> `text-secondary?`             | `string`                              | Lighter variation of dark text on light elements.                                       |
| <a id="text-tertiary"></a> `text-tertiary?`               | `string`                              | Text color on light elements. Should be a darker color for readability.                 |

<!-- [<endsnippet properties>] -->
